# HotelBot

./: .env  .replit  fromDialogflow_NORM.csv  intent_debug_traces.ods  main.py  pyproject.toml  readme.md  upstart.sh
architecture/: architecture_hotelBot.puml  architecture_hotelBot_dialogflow.puml  architecture_hotelBot_flask.puml
dialogflow_HotelBot/: agent.json
dialogflow_HotelBot/intents/: CustomerDelete - no.json  CustomerDelete - yes.json  CustomerDelete.json  CustomerDelete_usersays_en.json  CustomerHelp.json  CustomerHelp_usersays_en.json  Default Fallback Intent.json  Default Welcome Intent.json  Default Welcome Intent_usersays_en.json  ReservationBook - cancel.json  ReservationBook - cancel_usersays_en.json  ReservationBook - yes - custom.json  ReservationBook - yes - custom_usersays_en.json  ReservationBook - yes.json  ReservationBook.json  ReservationBook_usersays_en.json  ReservationCancel.json  ReservationCancel_usersays_en.json  ReservationGet.json  ReservationGet_usersays_en.json
templates/: index.html
